fix(#11): change align copyrite in footer

--- a/src/components/layout/footer/footer.module.css
+++ b/src/components/layout/footer/footer.module.css
@@ -19,6 +19,10 @@
   grid-column: 1 / 3;
 }
 
+.footer_bottom p:last-child {
+  text-align: end;
+}
+
 @media (max-width: 768px) {
   .footer_bottom {
     grid-template-columns: 1fr;
